[project]
name = "comfyui-rgt"
description = "This repo cast Recursive Generalization Transformer for Image Super-Resolution to ComfyUI, the original [a/paper link](https://arxiv.org/abs/2303.06373) and [a/github link](https://github.com/zhengchen1999/RGT)"
version = "1.0.0"
license = "LICENSE"
dependencies = []

[project.urls]
Repository = "https://github.com/viperyl/ComfyUI-RGT"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "viper"
DisplayName = "ComfyUI-RGT"
Icon = ""
